# tarantula

./: .gitignore  Cargo.toml  Config.toml  Dockerfile  README.md  README_en.md  build.rs  data.sh  docker-compose.yml  perf_grpc.sh  pref_grpc_req.json
data/: 국가중점데이터_컬럼정의서(25.02.03)_배포용.xlsx
examples/: use_search.rs
proto/: service.proto
shape_convert/: convert.go  go.mod  go.sum
shape_edit/: package-lock.json  package.json
shape_edit/src/: index.html  index.js  renderer.js
src/: config.rs  grpc.rs  lib.rs  main.rs  rest.rs  search.rs
src/cc/: error_codes.h  polygon.cc  polygon.h
src/utils/: shape.rs
tests/: test.rs
