[package]
name = "tarantula"
version = "0.1.0"
edition = "2021"

[dependencies]
shapefile = "*"
error-chain = "*"
autocxx = "0.30.0"
cxx = "1.0"
geojson = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "*"
tonic = "0.11"
prost = "0.12"
glob = "*"
scopeguard = "*"
rayon = "*"
stopwatch = "*"

[build-dependencies]
autocxx-build = "0.30.0"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
tonic-build = "0.11"


