[package]
name = "tarantula-s2"
version = "0.1.1"
edition = "2021"

exclude = [
    "data/*",     
    ".vscode/*",
    "shape_convert/*",
    "shape_edit/*"
]

description = "Search polygons at lngitude/latitude with s2geometry"

license = "MIT OR Apache-2.0"

[features]
nobuild = []

[package.metadata.docs.rs]
features = ["nobuild"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
shapefile = "0.7.0"
error-chain = "0.12.4"
autocxx = "0.30.0"
cxx = "1.0"
geojson = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.21.3"
tonic = "0.11"
prost = "0.12"
glob = "0.3.3"
scopeguard = "1.2.0"
rayon = "1.11.0"
stopwatch = "0.0.7"

[build-dependencies]
autocxx-build = "0.30.0"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
tonic-build = "0.11"


